[package]
name = "hyper-3841-minimal-reprod"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

tokio-rustls = "0.26.1"
rustls = "0.23.21"
rustls-pemfile = "2.2.0"

hyper = { version = "1.5.2", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.10", features = ["server-auto", "tokio"] }
